--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -191,8 +191,8 @@
                     <!-- Modal -->
                 </div>
             </div>
-            <div class="row row-cols-1">
-                <div class="p-md-3 p-sm-2" id="sort-container">
+            <div class="row row-cols-1"  id="sort-container">
+                <div class="p-md-3 p-sm-2 mt-3">
                     <div class="card">
                         <div
                                 class="card-header border-bottom text-dark"
@@ -269,7 +269,7 @@
                     </div>
                 </div>
 
-                <div class="p-md-3 p-sm-2">
+                <div class="p-md-3 p-sm-2 mt-3">
                     <div class="card">
                         <div
                                 class="card-header border-bottom text-dark"
@@ -346,7 +346,7 @@
                     </div>
                 </div>
 
-                <div class="p-md-3 p-sm-2">
+                <div class="p-md-3 p-sm-2 mt-3">
                     <div class="card">
                         <div
                                 class="card-header border-bottom text-dark"
@@ -441,8 +441,11 @@
                     <div>
                         Issue Details
                     </div>
-                    <div class="btn btn-primary" id="issue-edit-btn">
-                        edit
+                    <div class="d-flex justify-content-center align-items-center gap-3">
+                        <div class="btn btn-primary" id="issue-edit-btn">
+                            edit
+                        </div>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                 </div>
                 <div class="modal-body">
