--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -211,10 +211,7 @@
                                 >
                                     Name
                                 </h6>
-                                <span
-                                        class="card-title badge rounded-pill bg-success"
-                                >Success</span
-                                >
+
                                 <span
                                         class="card-title badge rounded-pill bg-danger"
                                 >Danger</span
@@ -245,12 +242,12 @@
                                 <p
                                         class="btn custom-color m-2 rounded-pill"
                                 >
-                                    Custom Color
+                                    java
                                 </p>
                                 <p
                                         class="btn custom-color m-2 rounded-pill"
                                 >
-                                    Australia
+                                    error
                                 </p>
                             </div>
                         </div>
@@ -292,10 +289,6 @@
                                         class="card-title badge rounded-pill bg-success"
                                 >Success</span
                                 >
-                                <span
-                                        class="card-title badge rounded-pill bg-danger"
-                                >Danger</span
-                                >
                                 <button class="btn btn-primary" data-bs-target="#issue-details" data-bs-toggle="modal">
                                     see more
                                 </button>
@@ -322,89 +315,12 @@
                                 <p
                                         class="btn custom-color m-2 rounded-pill"
                                 >
-                                    Custom Color
+                                    html
                                 </p>
                                 <p
                                         class="btn custom-color m-2 rounded-pill"
                                 >
-                                    Australia
-                                </p>
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <div class="code-block">
-                                <p>
-                                    this code does not work help me
-                                    please
-                                </p>
-                                <pre>
-&lt;div th:data-el_id="${element.getId()}"&gt; &lt;!-- does not work --&gt;
-&lt;div data-th-el_id="${element.getId()}"&gt; &lt;!-- does not work --&gt;</pre
-                                >
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="p-md-3 p-sm-2 mt-3">
-                    <div class="card">
-                        <div
-                                class="card-header border-bottom text-dark"
-                        >
-                            <div
-                                    class="col d-flex align-items-center gap-2"
-                            >
-                                <h4
-                                        class="card-title modal-detail-title"
-                                >
-                                    Title
-                                </h4>
-
-                                <h6
-                                        class="card-title"
-                                >
-                                    Name
-                                </h6>
-                                <span
-                                        class="card-title badge rounded-pill bg-success"
-                                >Success</span
-                                >
-                                <span
-                                        class="card-title badge rounded-pill bg-danger"
-                                >Danger</span
-                                >
-                                <button class="btn btn-primary" data-bs-target="#issue-details" data-bs-toggle="modal">
-                                    see more
-                                </button>
-                            </div>
-                            <div
-                                    class="col issue-time-line d-flex gap-2"
-                            >
-                                <div
-                                        class="d-flex align-items-center gap-2"
-                                >
-                                    <p>Posted</p>
-                                    <span>3 days ago</span>
-                                </div>
-                                <div
-                                        class="d-flex align-items-center gap-2"
-                                >
-                                    <p>Modified at</p>
-                                    <span>1 minute ago</span>
-                                </div>
-                            </div>
-                            <div
-                                    class="col issue-time-line d-flex gap-2"
-                            >
-                                <p
-                                        class="btn custom-color m-2 rounded-pill"
-                                >
-                                    Custom Color
-                                </p>
-                                <p
-                                        class="btn custom-color m-2 rounded-pill"
-                                >
-                                    Australia
+                                    bug
                                 </p>
                             </div>
                         </div>
